texlive-lang (2015.20151116-2) UNRELEASED; urgency=medium

  * remove adobemapping, use poppler-data instead (Closes: #805691)
    (thanks to Hideki Yamane)

 -- Norbert Preining <preining@debian.org>  Sat, 21 Nov 2015 11:55:49 +0900

texlive-lang (2015.20151116-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Mon, 16 Nov 2015 13:19:23 +0900

texlive-lang (2015.20151016-1) unstable; urgency=medium

  * new upstream checkout
  * set all packages to M-A: foreign

 -- Norbert Preining <preining@debian.org>  Fri, 16 Oct 2015 09:42:26 +0900

texlive-lang (2015.20150917-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Thu, 17 Sep 2015 12:56:40 +0900

texlive-lang (2015.20150823-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Sun, 23 Aug 2015 14:07:36 +0900

texlive-lang (2015.20150810-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Mon, 10 Aug 2015 10:54:02 +0900

texlive-lang (2015.20150703-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Fri, 03 Jul 2015 08:17:37 +0900

texlive-lang (2015.20150625-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Thu, 25 Jun 2015 13:38:02 +0900

texlive-lang (2015.20150524-1) experimental; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Sun, 24 May 2015 17:07:14 +0900

texlive-lang (2014.20141024-1) unstable; urgency=medium

  * new upstream checkout
  * bidi (tl-lang-arabic) needs iftex (tl-generic-extra) (Closes: #763926)

 -- Norbert Preining <preining@debian.org>  Fri, 24 Oct 2014 11:01:52 +0900

texlive-lang (2014.20140927-1) unstable; urgency=medium

  * new upstream checkout

 -- Norbert Preining <preining@debian.org>  Sat, 27 Sep 2014 20:51:11 +0900
