@@ -126,6 +126,9 @@ recommends;texlive-latex-extra;texlive-fonts-recommended
 # exceltex in texlive-latex-extra needs Spreadsheet::ParseExcel, suggest it
 suggests;texlive-latex-extra;libspreadsheet-parseexcel-perl
 #
+# we ship emacs files in texlive-lang-english
+depends;texlive-lang-english;emacsen-common (>= 2.0.8)
+#
 # 2014 -> 2015
 # ============
 # 
