@@ -1,0 +1,9 @@
+;;; 50texlive-lang-english.el -- debian emacs setups for texlive-lang-english
+
+(if (not (file-exists-p "/usr/share/emacs/site-lisp/ltx-help.el"))
+    (message "texlive-lang-english removed but not purged, skipping setup")
+
+  ;; Per autoload cookie on latex-help in ltx-help.el.
+  (autoload 'latex-help "ltx-help"
+    "Try to find info entry about LaTeX entity CMD." t))
+
